# Dissertacao

./: .gitignore  CMakeLists.txt  Launcher.lara  Transform.lara  apply-uve.sh  measure-instructions-UVE.js  measure-instructions.js  run-Benchmarks.sh  run-clava.sh  tsconfig.json  validate-clava.js  validate-spike.js
Clava-validation/: Commun.h  measure-instructions.js  memcpy.c  saxpy.c
Clava-validation/src/: Commun.h  memcpy_kernel.c  memcpy_main.c
Spike-validation/: Commun.h  Dataset.h  generateData.js  memcpy.c  run.js  saxpy.c  validate.js
UVE-kernels/: mamr_diag.c
benchmarks/: Commun.c  Commun.h  Dataset.h  checklist.md
benchmarks/3mm/: kernel.c  main.c
benchmarks/floyd-marshall/: kernel.c  main.c
benchmarks/gemm/: kernel.c  main.c
benchmarks/jacobi-1d/: kernel.c  main.c
benchmarks/jacobi-2d/: kernel.c  main.c
benchmarks/memcpy/: kernel.c  main.c
benchmarks/saxpy/: kernel.c  main.c
benchmarks/test/: kernel.c
benchmarks/trisolv/: kernel.c  main.c
docs/: UVE-Instruction-Usage.md  direct-streaming.c  dissertation-structure.md  notes.md  utils.lara
results-spike/: Spike-O0-instruction-count.md  Spike-O2-instruction-count.md  Spike-instruction-comparison.md  Spike-wUVE-instruction-count.md
scripts/: extract-UVE-instruction-usage.js  generateData.js
src/: kernel.json  memcpy.c
src-example/: kernel.json  memcpy.c
src-lara/: Evalualtor.js  Globals.js  Globals.lara  LoadKernel.js  Loader.js  Loader.lara  LoopFinder.js  Main.lara  Runner.js  Runner.lara  UVEContext.js
src-ts/: IR.ts
translation-examples/: Example1.md  Example2.md
(+75 files in other folders)
